# exdir-cpp

./: CMakeLists.txt  LICENSE  README.md  exdir-cpp-config.cmake.in  exdir-cpp.pc.in  exdir-cppConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/exdir/: array.hpp  dataset.hpp  exdir.hpp  file.hpp  group.hpp  ndarray.hpp  npy.hpp  object.hpp  raw.hpp
src/: array.cpp  dataset.cpp  file.cpp  group.cpp  ndarray.cpp  npy.cpp  npy.hpp  object.cpp  raw.cpp
tests/: CMakeLists.txt  array_tests.cpp  tests_main.cpp
